--- a/src/main/less/bootswatch.less
+++ b/src/main/less/bootswatch.less
@@ -186,6 +186,10 @@ textarea {
   .form-control {
     padding: @padding-xs-vertical @padding-xs-horizontal;
   }
+
+  input.form-control {
+    .box-shadow(inset 0 0 10px rgba(0, 0, 0, 0.5));
+  }
 }
 
 .has-warning {
@@ -396,7 +400,7 @@ a.list-group-item {
     &.active {
       background-color: @state-warning-bg;
     }
-    
+
     &.active:hover,
     &.active:focus {
       background-color: darken(@state-warning-bg, 5%);
@@ -407,7 +411,7 @@ a.list-group-item {
     &.active {
       background-color: @state-danger-bg;
     }
-    
+
     &.active:hover,
     &.active:focus {
       background-color: darken(@state-danger-bg, 5%);
@@ -434,6 +438,47 @@ hr {
     margin: @padding-small-horizontal 0;
 }
 
+.panel {
+    /* margin-bottom: (@line-height-computed / 2); */
+    margin-bottom: @padding-small-vertical;
+}
+
 .panel-title {
     // font-weight: bold;
 }
+
+/* ::-webkit-scrollbar { */
+    /* width: 16px; */
+    /* background-color: #ccc; */
+/* } */
+
+/* ::-webkit-scrollbar-track { */
+    /* .box-shadow(inset 0 0 6px rgba(0,0,0,.075)); */
+/* } */
+
+/* ::-webkit-scrollbar-track-piece { */
+    /* background-color: #63931e; */
+    /* border-radius: 4px; */
+    /* border: 1px solid #90b939; */
+/* } */
+
+/* ::-webkit-scrollbar-thumb { */
+    /* background: #93C42B; */
+    /* .box-shadow(inset 0 0 6px rgba(0, 0, 0, 0)); */
+    /* border-radius: 4px; */
+    /* border: 1px solid rgba(255,255, 255, 0); */
+/* } */
+
+/* ::-webkit-scrollbar-thumb:window-inactive { */
+    /* background: #e44f25; */
+/* } */
+
+*:not(input) {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
