--- a/src/main/less/bootswatch.less
+++ b/src/main/less/bootswatch.less
@@ -482,3 +482,18 @@ hr {
     user-select: none;
 }
 
+.row-fixed {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+}
+
+.row-fixed .col {
+    height: 100%;
+    overflow: auto;
+}
+
+/* .row-xs-12 { height: 100%; } */
+
