--- a/src/main/less/bootswatch.less
+++ b/src/main/less/bootswatch.less
@@ -482,6 +482,12 @@ hr {
     user-select: none;
 }
 
+a,
+.btn,
+.btn:hover {
+    cursor: default;
+}
+
 .row-fixed {
     top: 0;
     bottom: 0;
@@ -493,6 +499,145 @@ hr {
 .row-fixed .col {
     height: 100%;
     overflow: auto;
+}
+
+.tab-content {
+    iframe {
+        border: 0;
+    }
+}
+
+.ui-layout-pane {
+    /* background: @gray; */
+    /* background: @panel-bg; */
+    /* border: 1px solid @gray-border; */
+    /* padding: 10px; */
+    /* overflow: auto; */
+}
+
+.ui-layout-content {
+    padding: 10px;
+    position: relative;
+    overflow: auto;
+}
+
+.layout-child-container,
+.layout-content-container {
+    padding: 0px;
+    overflow: hidden;
+}
+
+.layout-child-container {
+    border: 0;
+}
+
+.layout-scroll {
+    overflow: auto;
+}
+
+.layout-hide {
+    display: none;
+}
+
+/* RESIZER-BARS */
+.ui-layout-resizer {
+    /* background: darken(@gray, 10%); */
+    background: @body-bg;
+    border: 1px solid @gray-border;
+    border-width: 0;
+}
+
+.ui-layout-resizer-drag {
+
+}
+
+.ui-layout-resizer-hover {
+
+}
+
+.ui-layout-resizer-open-hover,
+.ui-layout-resizer-dragging {
+    background: darken(@gray-darker, 5%);
+}
+
+.ui-layout-resizer-dragging {
+    border: 1px solid @gray-border;
+}
+
+.ui-layout-resizer-north-dragging,
+.ui-layout-resizer-south-dragging {
+    border-width: 1px 0;
+}
+
+.ui-layout-resizer-west-dragging,
+.ui-layout-resizer-east-dragging {
+    border-width: 0 1px;
+}
+
+.ui-layout-resizer-dragging-limit {
+    background: @brand-warning;
+}
+
+.ui-layout-resizer-closed-hover {
+    background: darken(@gray-darker, 10%)
+}
+
+.ui-layout-resizer-sliding {
+    opacity: .10;
+    filter: alpha(opacity=10);
+}
+
+.ui-layout-resizer-sliding-hover {
+    opacity: 1.00;
+    filter: alpha(opacity=100);
+}
+
+.ui-layout-resizer-north-sliding-hover { border-bottom-width: 1px; }
+.ui-layout-resizer-south-sliding-hover { border-top-width: 1px; }
+.ui-layout-resizer-west-sliding-hover { border-right-width: 1px; }
+.ui-layout-resizer-east-sliding-hover { border-left-width: 1px; }
+
+/* TOGGLER-BUTTONS */
+.ui-layout-toggler {
+    border: 1px solid darken(@gray-border, 10%);
+    background-color: darken(@gray-border, 5%);
+}
+
+.ui-layout-resizer-hover .ui-layout-toggler {
+    opacity: .60;
+    filter: alpha(opacity=60);
+}
+
+.ui-layout-toggler-hover,
+.ui-layout-resizer-hover .ui-layout-toggler-hover {
+    background-color: #FC6;
+    opacity: 1.00;
+    filter: alpha(opacity=100);
+}
+
+.ui-layout-toggler-north,
+.ui-layout-toggler-south {
+    border-width: 0 1px;
+}
+.ui-layout-toggler-west,
+.ui-layout-toggler-east {
+    border-width: 1px 0;
+}
+
+.ui-layout-resizer-sliding .ui-layout-toggler {
+    display: none;
+}
+
+.ui-layout-toggler .content {
+    color: #666;
+    font-size: 12px;
+    font-weight: bold;
+    width: 100%;
+    padding-bottom: 0.35ex;
+}
+
+:focus {
+    outline: none;
 }
 
 /* .row-xs-12 { height: 100%; } */
